# template_canister

./: .gitignore  Cargo.toml  README.md  dfx.json
src/: canister.rs  main.rs  state.rs
src/state/: config.rs
